--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ assets/test.tar
 assets/test_results.json
 data/QM9/raw/qm9.zip
 runs/*
+assets/qm9_EGNN/checkpoint_0/_CHECKPOINT_METADATA
+assets/qm9_EGNN/checkpoint_0/_METADATA
+assets/qm9_EGNN/checkpoint_0/checkpoint
